--- a/BlueBeardsBride/bbb20220628.md
+++ b/BlueBeardsBride/bbb20220628.md
@@ -1,16 +1,36 @@
 ### Вводные данные
 
-Я не умею водить хорроры! :)
-Использовал только основной рулбук для чистоты эксперимента.
+Рулбук "Невесты" офигенный. Отличные иллюстрации, сочный язык, неплохая структура и... **атмосферность**. Кто читал, тот поймёт.
+
+Собственно, в первую очередь именно он подтолкнул меня к идее попробовать сыграть в "Невесту". Плюс, игра предназначена для ваншотов, а я их люблю. Так что, несмотря на малый опыт в хоррорных НРИ, решил рискнуть. Забегая вперёд - не пожалел ни капли.
+
+Для игры использовался только основной рулбук. Во-первых, в моём понимании игра должна хорошо работать без дополнительных материалов. Во-вторых, у меня и так немного свободного времени, чтобы вместо одного кирпича изучать три.
 
 ### Впечатления от игры
 
-Свадьба - это по сути нулёвка. В онлайн-играх её можно разнести по времени с игрой и использовать для заготовок.
-На свадьбе генерируется целое облако тэгов для последующешго вдохновения: дети, материнство, богатство, защита, сила, статус, волосы, мать-дочь, строгость, дисциплина, высокомерие, заслуженное наказание, элегантность, грязь, эгоизм, природа
+Игра состоит из трёх крупных фаз:
+1. Свадьба
+2. Путешествие по дому
+3. Финал истории
+
+**Свадьба** - это по сути нулёвка. В онлайн-играх её, возможно, стоит провести текстом заранее. Я так не делал, потому что играл "по рулбуку", но есть чувство, что это может облегчить работу мастера.
+На свадьбе вырисовываются контуры того, что можно ввести в игру и генерируется целое облако тэгов для вдохновения. У меня оно выглядело так: дети, материнство, богатство, защита, сила, статус, волосы, отношения мать-дочь, строгость, дисциплина, высокомерие, заслуженное наказание, элегантность, грязь, эгоизм, природа.
+Не всё сыграло, но кое-что помогло.
+
+**Путешествие по дому** - основная и самая интересная фаза игры. Рулбук прописывает такую структуру этой фазы:
+1. Сестра, владеющая кольцом, описывает вид ключ
+2. Мастер описывает дверь в комнату
+3. Невеста исследует комнату, сталкиваясь со свидетельствами трагедии, произошедшей здесь когда-то, и её последствиями
+4. Невеста делает своё заключение о том, что произошло в комнате и виноват ли Синяя Борода в этом... или сбегает, не делая такого вывода, если комната слишком страшная
+
+Ключи дают интересные идеи, но неплохо иметь несколько заранее приготовленных концепций и "подкручивать" их под то, что дают игроки. Рулбук рекомендует не планировать комнаты заранее, но это не эквивалентно "играйте на голом экспромте".
+Описание двери - хорошая находка, позволяет мастеру выиграть немного времени и структурировать свои мысли о том, что будет ожидать Невесту в комнате.
 
 Ужасов было мало.
 
 В нашем случае, как правильно подметил игрок во время обратной связи, получился "хоррор после игры". Когда мы осознали, КОГО и КАК мы умудрились оправдать в своих глазах, а местами даже уподобиться ему. Наш Синяя Борода получился в глазах Невесты человеком романтического склада, сильным и безжалостным к врагам и провинившимся, добрым и заботливым к друзьям... но очень легко разочаровывающимся в людях и способным на ужасные вещи в отношении тех, кто не соответствует его высоким стандартам, человеком, который ничего не прощает и не верит во "вторые шансы".
+
+Современного человека пугает потеря агентности. "Невеста" делает это, заключая героиню в рамки общества, рассматривающего её как предмет, но мастер должен давить на это сильнее. Сужение доступного диапазона опций даже чисто механическим путём тоже создаёт неуютное ощущение.
 
 ### Что можно было сделать лучше
 
@@ -20,4 +40,4 @@
 
 То, что от Сестер ожидается постоянный полилог и не всегда дружественный, надо проговаривать игрокам заранее прямым текстом. А то все стеснялись вклиниваться со своим ценным мнением, а в конце прямо сроднились.
 
-Современного человека пугает потеря агентности. "Невеста" делает это, заключая героиню в рамки общества, рассматривающего её как предмет, но мастер должен давить на это сильнее. Сужение доступного диапазона опций даже чисто механическим путём тоже создаёт неуютное ощущение.
+При создании комнаты лучше идти от прошлого. У меня не всегда получалось хорошо связать историю с Синей Бородой.
