--- a/BlueBeardsBride/bbb20220628.md
+++ b/BlueBeardsBride/bbb20220628.md
@@ -23,21 +23,35 @@
 3. Невеста исследует комнату, сталкиваясь со свидетельствами трагедии, произошедшей здесь когда-то, и её последствиями
 4. Невеста делает своё заключение о том, что произошло в комнате и виноват ли Синяя Борода в этом... или сбегает, не делая такого вывода, если комната слишком страшная
 
-Ключи дают интересные идеи, но неплохо иметь несколько заранее приготовленных концепций и "подкручивать" их под то, что дают игроки. Рулбук рекомендует не планировать комнаты заранее, но это не эквивалентно "играйте на голом экспромте".
-Описание двери - хорошая находка, позволяет мастеру выиграть немного времени и структурировать свои мысли о том, что будет ожидать Невесту в комнате.
+**Ключи** дают интересные идеи, но неплохо иметь несколько заранее приготовленных концепций и "подкручивать" их под то, что дают игроки. Рулбук рекомендует не планировать комнаты заранее, но это не эквивалентно "играйте на голом экспромте". В конце концов, написание этих концепций само по себе неплохо готовит мастера к игре.
 
-Ужасов было мало.
+**Описание двери** - хорошая находка, позволяет мастеру выиграть немного времени и структурировать свои мысли о том, что будет ожидать Невесту в комнате. 
 
-В нашем случае, как правильно подметил игрок во время обратной связи, получился "хоррор после игры". Когда мы осознали, КОГО и КАК мы умудрились оправдать в своих глазах, а местами даже уподобиться ему. Наш Синяя Борода получился в глазах Невесты человеком романтического склада, сильным и безжалостным к врагам и провинившимся, добрым и заботливым к друзьям... но очень легко разочаровывающимся в людях и способным на ужасные вещи в отношении тех, кто не соответствует его высоким стандартам, человеком, который ничего не прощает и не верит во "вторые шансы".
+Для меня самым стрессовым моментом было начало **исследования комнаты**. Здесь ощущалось очень сильное давление, потому что ты в экспресс-темпе готовишь рамку для того, что будет ожидать игроков. Нужно хотя бы контурно накидать ужас, представить (в голове) пару действующих лиц, добавить атмосферных деталей и заполнить комнату интересными предметами. В рулбуке есть короткий гайд для этого, но мне он не особо помог. Шпаргалка "Room Threats" полезная. Гайд по созданию предметов оказался для меня слишком расплывчатым в условиях "генерь контент на лету".
 
-Современного человека пугает потеря агентности. "Невеста" делает это, заключая героиню в рамки общества, рассматривающего её как предмет, но мастер должен давить на это сильнее. Сужение доступного диапазона опций даже чисто механическим путём тоже создаёт неуютное ощущение.
+Ужасов у меня, по моим ощущениям, было мало. Задним числом кажется, что в каждой комнате надо было начинать от первой трагедии, а затем уже отталкиваться от неё и описывать состояние комнаты "сейчас". Я же делал наоборот и это приводило к следующим проблемам:
+1. При осмотре предмета вопрос про воспоминания, которые он таит, загружал мой мозговой стори-процессор до состояния троттлинга. :)
+2. Влияние Синей Бороды на историю комнаты получалось слишком опосредованным
+3. Вводить ужас местами было сложно
+Как только я сгенерировал комнату, оттолкнувшись от трагедии, получилось (по моим ощущениям) намного лучше. Кажется, мой мозг лучше работает в режиме "к чему это привело", чем "что могло к этому привести". Но этот соблазн хоть побыстрее что-то рассказать игрокам, а дальше по ходу пьесы сориентироваться... не надо ему поддаваться, в общем.
+
+А ещё, кажется, современного человека пугает потеря агентности. "Невеста" делает это, заключая героиню в рамки общества, рассматривающего её как объект, но мастер может давить на это сильнее, делая все проявления субъектности "дорогими", требуя цену за каждое. Сужение доступного диапазона опций даже чисто механическим путём тоже создаёт неуютное ощущение. :)
+
+**Финал** оказался самым простым. Невеста уже собрала непротиворечивый образ Синей Бороды и сделала свои выводы, плюс рулбук даёт рекомендации и вопросы, а исследовать последнюю комнату не нужно - достаточно её описать. В общем, в этой фазе игры я выдохнул.
 
 ### Что можно было сделать лучше
 
-Надо больше жести!
+Как уже упоминал, комнаты можно было делать и получше. Мне это видится навыком, которым я на момент игры (да и сейчас тоже) не вполне овладел. Для себя отметил следующее:
+1. Мало мрачных пугающих деталей. Мои комнаты получаются немного схематичными, "чистенькими", без грязи и страшных подробностей.
+2. Мало объектов для исследований (а те, что есть, могли бы быть поинтереснее)
+3. Ужасы слишком домашние, вместо боди-хоррора и скримеров вышло домашнее насилие, тирания и "главные монстры тут люди"
 
-Надо побольше неприятных деталей. Мои комнаты получаются немного схематичными, "чистенькими", без грязи и пугающих подробностей.
+То, что от Сестер ожидается постоянный полилог и не всегда дружественный, надо проговаривать игрокам заранее прямым текстом. А то все стеснялись вклиниваться со своим ценным мнением в нарратив носителя Кольца, а в конце вообще практически спелись. А ведь изначально игра требует прописать отношеньки, которые даже в формулировках прозрачно намекают на криповую "Санта-Барбару" в голове Невесты.
 
-То, что от Сестер ожидается постоянный полилог и не всегда дружественный, надо проговаривать игрокам заранее прямым текстом. А то все стеснялись вклиниваться со своим ценным мнением, а в конце прямо сроднились.
+### Вывод
 
-При создании комнаты лучше идти от прошлого. У меня не всегда получалось хорошо связать историю с Синей Бородой.
+Несмотря на всё, мне понравилось.
+
+В нашем случае, как правильно подметил игрок во время обратной связи, получился "хоррор после игры". Когда мы осознали, КОГО и КАК мы умудрились оправдать в своих глазах, а местами даже уподобиться ему. Наш Синяя Борода получился в глазах Невесты человеком романтического склада, сильным и безжалостным к врагам и провинившимся, добрым и заботливым к друзьям... но очень легко разочаровывающимся в людях и способным на ужасные вещи в отношении тех, кто не соответствует его высоким стандартам. Человеком, который ничего не прощает и не верит во "вторые шансы". Человеком, жизнь с которым похожа на роскошное и позолоченное минное поле.
+
+И да, игроки - лапочки и молодцы.
